--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ description: # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://payloadwizard.github.io"
+url: "https://0xAbeni.github.io"
 
 github:
-  username: PayloadWizard # change to your GitHub username
+  username: 0xAbeni # change to your GitHub username
 
 # twitter:
 #   username: twitter_username # change to your Twitter username
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-#avatar: /assets/img/avatar.png
+avatar: /assets/img/avatar.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
